cmake_minimum_required (VERSION 3.24)

project ("Neon")

set(CMAKE_CONFIGURATION_TYPES "Debug;Release;NativeRelease" CACHE STRING "" FORCE)

set(CMAKE_INTERPROCEDURAL_OPTIMIZATION TRUE)

if(MSVC)
    # Basic optimization flags for MSVC
    set(MSVC_FLAGS "/O2 /GL /LTCG /EHsc /MD /Gw /Gy /Oi /Ot /Zc:inline /fp:fast")

    # Detect architecture
    # CMAKE_SYSTEM_PROCESSOR is 'AMD64', 'ARM64', etc.
    # CMAKE_VS_PLATFORM_NAME is 'x64', 'Win32', 'ARM64', etc. (Visual Studio only)
    string(TOUPPER "${CMAKE_SYSTEM_PROCESSOR}" SYSTEM_ARCH)
    message(STATUS "MSVC target architecture: ${SYSTEM_ARCH}")

    set(MSVC_ARCH_FLAGS "")

    if(SYSTEM_ARCH MATCHES "AMD64" OR SYSTEM_ARCH MATCHES "X64")
        set(MSVC_ARCH_FLAGS "/arch:AVX2")
    elseif(SYSTEM_ARCH MATCHES "ARM64")
        message(STATUS "MSVC ARM64 target detected — skipping /arch: flags")
    elseif(SYSTEM_ARCH MATCHES "X86" OR SYSTEM_ARCH MATCHES "WIN32")
        set(MSVC_ARCH_FLAGS "/arch:SSE2")  # SSE2 is default but explicit is fine
    else()
        message(WARNING "Unknown MSVC architecture: ${SYSTEM_ARCH}")
    endif()

    # Combine and set flags
    set(CMAKE_CXX_FLAGS_RELEASE "${MSVC_FLAGS} ${MSVC_ARCH_FLAGS}")
    set(CMAKE_C_FLAGS_RELEASE "${MSVC_FLAGS} ${MSVC_ARCH_FLAGS}")

    set(CMAKE_CXX_FLAGS_NATIVERELEASE "${CMAKE_CXX_FLAGS_RELEASE}")
    set(CMAKE_C_FLAGS_NATIVERELEASE "${CMAKE_C_FLAGS_RELEASE}")

    set(CMAKE_EXE_LINKER_FLAGS_NATIVERELEASE "" CACHE STRING "" FORCE)
endif()

if(LINUX AND CMAKE_CXX_COMPILER_ID STREQUAL "GNU")
	set(GNU_FLAGS "-O2 -flto -fstrict-aliasing -fprefetch-loop-arrays -fipa-pta -pthread -ftree-vectorize -fopt-info-vec-optimized -fomit-frame-pointer -fgraphite-identity -floop-nest-optimize -fno-math-errno -ffp-contract=fast")
	set(CMAKE_CXX_FLAGS_RELEASE "${GNU_FLAGS} -DNDEBUG")
	set(CMAKE_C_FLAGS_RELEASE "${GNU_FLAGS} -DNDEBUG")

	set(CMAKE_CXX_FLAGS_NATIVERELEASE "${GNU_FLAGS} -march=native -mtune=native -DNDEBUG")
	set(CMAKE_C_FLAGS_NATIVERELEASE "${GNU_FLAGS} -march=native =mtune=native -DNDEBUG")

    set(CMAKE_EXE_LINKER_FLAGS_NATIVERELEASE "-s" CACHE STRING "" FORCE)
endif()

if((LINUX OR WIN32) AND (CMAKE_CXX_COMPILER_ID STREQUAL "Clang" OR CMAKE_CXX_COMPILER_ID STREQUAL "ClangCl"))
    set(CLANG_FLAGS "-O2 -flto=full -fstrict-aliasing -pthread -Rpass=loop-vectorize -fomit-frame-pointer -fslp-vectorize -fno-math-errno -ffp-contract=fast")
    set(CMAKE_CXX_FLAGS_RELEASE "${CLANG_FLAGS} -DNDEBUG")
    set(CMAKE_C_FLAGS_RELEASE "${CLANG_FLAGS} -DNDEBUG")

    set(CMAKE_CXX_FLAGS_NATIVERELEASE "${CLANG_FLAGS} -march=native -mtune=native -DNDEBUG")
    set(CMAKE_C_FLAGS_NATIVERELEASE "${CLANG_FLAGS} -march=native -mtune=native -DNDEBUG")

    set(CMAKE_EXE_LINKER_FLAGS_NATIVERELEASE "-s" CACHE STRING "" FORCE)
endif()

if(APPLE AND CMAKE_CXX_COMPILER_ID STREQUAL "Clang")
    # Apple Clang has more restrictions and lags behind mainline Clang
    set(APPLE_CLANG_FLAGS "-O2 -flto -fstrict-aliasing -pthread -fomit-frame-pointer -fslp-vectorize -fno-math-errno -ffp-contract=fast")
    set(CMAKE_CXX_FLAGS_RELEASE "${APPLE_CLANG_FLAGS} -DNDEBUG")
    set(CMAKE_C_FLAGS_RELEASE "${APPLE_CLANG_FLAGS} -DNDEBUG")

    set(CMAKE_CXX_FLAGS_NATIVERELEASE "${APPLE_CLANG_FLAGS} -march=native -mtune=native -DNDEBUG")
    set(CMAKE_C_FLAGS_NATIVERELEASE "${APPLE_CLANG_FLAGS} -march=native -mtune=native -DNDEBUG")

    set(CMAKE_EXE_LINKER_FLAGS_NATIVERELEASE "-s" CACHE STRING "" FORCE)
endif()

if(CMAKE_BUILD_TYPE STREQUAL "Release")
    message("Compiler flags [Neon] are: ${CMAKE_CXX_FLAGS_RELEASE}")
elseif(CMAKE_BUILD_TYPE STREQUAL "NativeRelease")
    message("Compiler flags [Neon] are: ${CMAKE_CXX_FLAGS_NATIVERELEASE}")
endif()

message("Using C++ compiler: ${CMAKE_CXX_COMPILER}\nUsing C compiler: ${CMAKE_C_COMPILER}")

file(GLOB_RECURSE SOURCES 
	"${CMAKE_CURRENT_SOURCE_DIR}/src/*.cpp"
)

set(COMPILE_TARGET "Executable" CACHE STRING "Choose build target: Executable or Lib")

add_executable(Neon ${SOURCES} "${CMAKE_CURRENT_SOURCE_DIR}/src/main.cpp")

add_subdirectory(Carbo)

target_include_directories(Neon 
	PUBLIC
	${CMAKE_CURRENT_SOURCE_DIR}
	${CMAKE_CURRENT_SOURCE_DIR}/src
)

target_link_libraries(Neon PRIVATE Carbo)

target_compile_features(Neon PRIVATE cxx_std_20)
